--- a/publicar/worker_retrain/requirements.txt
+++ b/publicar/worker_retrain/requirements.txt
@@ -1,124 +1,159 @@
 absl-py==2.3.1
-alembic==1.16.3
+alembic==1.16.5
 aniso8601==10.0.1
 annotated-types==0.7.0
-anyio==4.9.0
+anyio==4.11.0
 argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
+argon2-cffi-bindings==25.1.0
 astunparse==1.6.3
 attrs==25.3.0
+Authlib==1.6.5
 blinker==1.9.0
-boto3==1.39.4
-botocore==1.39.4
-cachetools==5.5.2
-certifi==2025.7.9
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
+boto3==1.40.43
+botocore==1.40.43
+cachetools==6.2.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
 cloudpickle==3.1.1
-contourpy==1.3.2
+contourpy==1.3.3
+cryptography==45.0.7
 cycler==0.12.1
+cyclopts==3.24.0
 databricks-cli==0.18.0
-databricks-sdk==0.58.0
+databricks-sdk==0.67.0
 Deprecated==1.2.18
 dm-tree==0.1.9
+dnspython==2.8.0
 docker==7.1.0
+docstring_parser==0.17.0
+docutils==0.22.2
+email-validator==2.3.0
 entrypoints==0.4
-fastapi==0.116.0
-Flask==3.1.1
-flatbuffers==25.2.10
-fonttools==4.58.5
+exceptiongroup==1.3.0
+fastapi==0.118.0
+fastmcp==2.12.4
+Flask==3.1.2
+flatbuffers==25.9.23
+fonttools==4.60.1
 gast==0.6.0
 gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.3
+GitPython==3.1.45
+google-auth==2.41.1
 google-auth-oauthlib==1.2.2
 google-pasta==0.2.0
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
-greenlet==3.2.3
-grpcio==1.73.1
+greenlet==3.2.4
+grpcio==1.75.1
 gunicorn==23.0.0
 h11==0.16.0
 h5py==3.14.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
 idna==3.10
 importlib_metadata==8.7.0
+isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
-joblib==1.5.1
-keras==3.10.0
-kiwisolver==1.4.8
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-path==0.3.4
+jsonschema-specifications==2025.9.1
+keras==3.11.3
+kiwisolver==1.4.9
+lazy-object-proxy==1.12.0
 libclang==18.1.1
 Mako==1.3.10
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.3
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.6
+mcp==1.16.0
 mdurl==0.1.2
-minio==7.2.15
-ml_dtypes==0.5.1
-mlflow==3.1.1
-mlflow-skinny==3.1.1
-mllibprodest==1.8.9
+minio==7.2.18
+ml_dtypes==0.5.3
+mlflow==3.4.0
+mlflow-skinny==3.4.0
+mlflow-tracing==3.4.0
+mllibprodest==1.9.0
+more-itertools==10.8.0
 namex==0.1.0
-numpy==2.1.3
+numpy==2.3.3
 oauthlib==3.3.1
-opentelemetry-api==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
+opentelemetry-api==1.37.0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
 opt_einsum==3.4.0
-optree==0.16.0
+optree==0.17.0
 packaging==25.0
-pandas==2.3.1
+pandas==2.3.3
+parse==1.20.2
+pathable==0.4.4
 pillow==11.3.0
-pip==25.1.1
-protobuf==5.29.5
-pyarrow==20.0.0
+pip==25.2
+protobuf==6.32.1
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pycparser==2.22
+pycparser==2.23
 pycryptodome==3.23.0
-pydantic==2.11.7
+pydantic==2.11.9
 pydantic_core==2.33.2
+pydantic-settings==2.11.0
 Pygments==2.19.2
 PyJWT==2.10.1
-pyparsing==3.2.3
+pyparsing==3.2.5
+pyperclip==1.11.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.2
+PyYAML==6.0.3
 querystring-parser==1.2.4
-requests==2.32.4
+referencing==0.36.2
+requests==2.32.5
 requests-oauthlib==2.0.0
-rich==14.0.0
+rfc3339-validator==0.1.4
+rich==14.1.0
+rich-rst==1.3.1
+rpds-py==0.27.1
 rsa==4.9.1
-s3transfer==0.13.0
-scikit-learn==1.7.0
-scipy==1.16.0
+s3transfer==0.14.0
+scikit-learn==1.7.2
+scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.41
+SQLAlchemy==2.0.43
 sqlparse==0.5.3
-starlette==0.46.2
+sse-starlette==3.0.2
+starlette==0.48.0
 tabulate==0.9.0
-tensorboard==2.19.0
+tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-tensorflow==2.19.0
+tensorflow==2.20.0
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.1.0
 threadpoolctl==3.6.0
-typing_extensions==4.14.1
-typing-inspection==0.4.1
+typing_extensions==4.15.0
+typing-inspection==0.4.2
 tzdata==2025.2
 urllib3==2.5.0
-uvicorn==0.35.0
+uvicorn==0.37.0
 websocket-client==1.8.0
-Werkzeug==3.1.3
+Werkzeug==3.1.1
 wheel==0.45.1
-wrapt==1.17.2
+wrapt==1.17.3
 zipp==3.23.0
